<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.aaron.nutrisportbetaversion.CalcularGrasaCorporalActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewGrasa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/grasaCorporal_info"
            android:textAppearance="@android:style/TextAppearance.Material.Large"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editText_Edad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/grasaCorporal_InputEdad" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editText_IMC"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/grasaCorporal_InputIMC" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editText_Sexo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/grasaCorporal_InputSexo" />

            <Button
                android:id="@+id/btn_calcGrasaCorporea"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/grasaCorporal_btnAction" />

        </android.support.design.widget.TextInputLayout>
    </LinearLayout>
</RelativeLayout>
