<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.aaron.nutrisportbetaversion.CalculoIndiceMasaCorporalActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/imc_info"
            android:textAppearance="@android:style/TextAppearance.Material.Large"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editText_pesoIMC"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/imc_InputPeso" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editText_alturaIMC"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/imc_InputAltura" />

            <Button
                android:id="@+id/btn_calculoimc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/imc_btnAction" />
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>
</RelativeLayout>
