<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    tools:context="com.example.aaron.nutrisportbetaversion.AgregarEntrenamientoActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/inputTextDia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/agregarEntrenamiento_Dia" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/inputTextTipo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/agregarEntrenamiento_Tipo" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/inputTextDuration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/agregarEntrenamiento_Duracion" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/inputTextObservaciones"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/agregarEntrenamiento_Notas" />

            <Button
                android:id="@+id/btn_addTraining"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:text="@string/agregarEntrenamiento_btnAddRutine" />

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

</RelativeLayout>
