<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/recyclerAlimento_Producto"
            android:textAppearance="@android:style/TextAppearance.Material.Large"
           />

        <TextView
            android:id="@+id/producto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
           />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/recyclerAlimento_Unidad"
            android:textAppearance="@android:style/TextAppearance.Material.Large"
            android:textAlignment="center"
             />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/recyclerAlimento_Hidratos"
            android:textAppearance="@android:style/TextAppearance.Material.Large"
             />

        <TextView
            android:id="@+id/hidratos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"

            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/recyclerAlimento_gr"
            android:textAppearance="@android:style/TextAppearance.Material.Large"
            android:textAlignment="center"

            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/recyclerAlimento_Proteinas"
            android:textAppearance="@android:style/TextAppearance.Material.Large"
            />

        <TextView
            android:id="@+id/proteinas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"

            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/recyclerAlimento_gr"
            android:textAppearance="@android:style/TextAppearance.Material.Large"
            android:textAlignment="center"

            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/recyclerAlimento_Grasas"
            android:textAppearance="@android:style/TextAppearance.Material.Large"
            />

        <TextView
            android:id="@+id/grasas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"

            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/recyclerAlimento_gr"
            android:textAppearance="@android:style/TextAppearance.Material.Large"
            android:textAlignment="center"

            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/recyclerAlimento_Energia"
            android:textAppearance="@android:style/TextAppearance.Material.Large"
           />

        <TextView
            android:id="@+id/energia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"

            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/recyclerAlimento_Kcal"
            android:textAppearance="@android:style/TextAppearance.Material.Large"
            android:textAlignment="center"

            android:textSize="18sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/recyclerAlimento_Fibra"
            android:textAppearance="@android:style/TextAppearance.Material.Large"
            />

        <TextView
            android:id="@+id/fibra"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"

            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/recyclerAlimento_gr"
            android:textAppearance="@android:style/TextAppearance.Material.Large"
            android:textAlignment="center"

            android:textSize="18sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginTop="8dp"
        android:background="@android:color/darker_gray">

    </View>
</LinearLayout>