<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/recyclerEntrenamiento_Dia"
            android:textAppearance="@android:style/TextAppearance.Material.Large"/>

        <TextView
            android:id="@+id/diaRecyTra"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textAppearance="@android:style/TextAppearance.Material.Large"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView20"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/recyclerEntrenamiento_Tipo"
            android:textAppearance="@android:style/TextAppearance.Material.Large"/>

        <TextView
            android:id="@+id/tipo_rutinaRecyTra"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textAppearance="@android:style/TextAppearance.Material.Large"
            android:textSize="18sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView21"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/recyclerEntrenamiento_Duracion"
            android:textAppearance="@android:style/TextAppearance.Material.Large"/>

        <TextView
            android:id="@+id/time-durationRecyTra"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textAppearance="@android:style/TextAppearance.Material.Large"
            android:textSize="18sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/recyclerEntrenamiento_Observaciones"
            android:textAppearance="@android:style/TextAppearance.Material.Large"/>

        <TextView
            android:id="@+id/observacionesRecyTra"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textAppearance="@android:style/TextAppearance.Material.Large"
            android:textSize="18sp"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginTop="8dp"
        android:background="@android:color/darker_gray">
    </View>

</LinearLayout>